tests/fixtures/invalid/pow_set_str.py
# Cannot call pow() with Set[int], Str
x = pow({1, 2, 3}, "hello")
